[tool.poetry]
name = "src"
version = "0.1.0"
description = "Building a complete ML service, from A to Z."
authors = ["flaviassantos <ssantosflavia@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.10"
hopsworks = "^3.4.2"
jupyter = "^1.0.0"
pandas = "^1.5.2"
python-dotenv = "^1.0.0"
pyarrow = "^14.0.2"
tqdm = "^4.66.1"
plotly = "^5.18.0"
scikit-learn = "^1.3.2"
xgboost = "^2.0.3"
lightgbm = "^4.2.0"
optuna = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
